IPC144NBB-Workshops-main/ws4/errors.txt
report.c: In function ‘readStudentInfo’:
report.c:14:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < num; i++) {
     ^
report.c:14:5: note: use option -std=c99 or -std=gnu99 to compile your code
report.c: In function ‘printReport’:
report.c:28:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < num; i++) {
     ^
